update the login flow for student and guardian

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@shared/*": ["src/shared/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/features/auth/pages/t.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
