--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@pixi/react": "^8.0.5",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dompurify": "^3.0.8",
+    "gsap": "^3.14.2",
+    "pixi.js": "^8.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
